--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <ul>
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="#projects">Recent Projects</a></li>
-                    <li><a href="#services">About</a></li>
+                    <li><a href="#services">Services</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             <!-- </nav> -->
