--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 </body>
 <!-- Footer -->
 <footer>
+    <section id="contact">
     <div class="footer-container">
         <div class="left-col">
             <img src="img/Progate_logo_blackv3_no_back.png" class="lambang" height="100" width="100">
@@ -159,6 +160,7 @@
             </form>
         </div>
     </div>
+    </section>
 </footer>
 <!-- end of footer -->
 </html>
