--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <!-- <nav class="navbar"> -->
                 <ul>
                     <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="#projects">Recent Projects</a></li>
                     <li><a href="#services">Services</a></li>
+                    <li><a href="#projects">Recent Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             <!-- </nav> -->
@@ -71,7 +71,7 @@
              <h1 class="section-title">SER<span>VI</span>CES</h1>
              <p>Kami menawarkan berbagai layanan dan jasa yang mempermudah pekerjaan anda.</p>
          </div>
-         <div class="servie-bottom">
+         <div class="service-bottom">
              <div class="service-item">
                  <div class="icon">
                     <img src="https://img.icons8.com/dusk/50/000000/home.png"/>
