--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h1>Hello,<span></span></h1>
             <h1>We Are From <span></span></h1>
             <h1>C02 <span></span></h1>
-            <a href="nama.html" type="button" class="cta">Progate C02</a>
+            <a href="nama.html" type="button" class="cta">Our Team</a>
         </div>
     </div>  
     </div>
